<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:background="@drawable/background"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="#FFFFFFFF"			
			android:padding="20dip"
			android:text="@string/app_introduce"/>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical"
		android:paddingTop="100dip">
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:gravity="center">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="#FFFFFFFF"			
			android:padding="20dip"
			android:text="@string/username"/>
		<EditText
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1.0"
			android:id="@+id/username" />
	</LinearLayout>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:gravity="center">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"			
			android:textColor="#FFFFFFFF"			
			android:padding="20dip"
			android:text="@string/password"/>
		<EditText
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1.0"
			android:password="true" 
			android:id="@+id/password" />
	</LinearLayout>
	<LinearLayout				
		android:orientation="horizontal"
		android:gravity="center"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">	
	<Button
		android:layout_gravity="center"
		android:id="@+id/auth_button"		
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/auth_button_label" />
	<Button
		android:layout_gravity="center"
		android:id="@+id/look_around_button"		
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/look_around" />
	</LinearLayout>
	<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="#FFFFFFFF"			
			android:padding="20dip"
			android:text="@string/about_oauth"/>
	</LinearLayout>
</LinearLayout>