<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"	
	android:orientation="horizontal"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:padding="10dip"
	>	 
			<TextView android:id="@+id/paginatorTitle" 
				android:layout_gravity="center_vertical"
				android:text="@string/welcome"
				android:textColor="#FF219A44"
				android:gravity="left"
				android:paddingRight="10dip"
				android:layout_height="wrap_content"
    			android:layout_width="wrap_content" /> 
    		<LinearLayout android:orientation="horizontal"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				android:gravity="right">
				
	    		<Button android:id="@+id/prePage" 				
					android:text="@string/pre_page"					
					android:textColor="#FFFFFFFF"						
				    android:background="@drawable/orange_btn"
				    android:layout_marginRight="10px"
					android:layout_height="wrap_content"
	    			android:layout_width="wrap_content" /> 
	    		<Button android:id="@+id/nextPage" 
					android:textColor="#FFFFFFFF"				
					android:background="@drawable/orange_btn"
					android:layout_marginRight="10px"
					android:text="@string/next_page"					
					android:layout_height="wrap_content"
	    			android:layout_width="wrap_content" /> 
 			</LinearLayout>
</LinearLayout>